# swiss_chess

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
swiss_chess/: __init__.py  main.py
swiss_chess/utils/: __init__.py  finals.py  pairing.py  player.py  plotting.py  podium.py  puzzle_battle.py  rounds.py  utils.py
